# lvlm-interpret-medgemma

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LATEST_FIXES.md  PAPER_RESEARCH_SUMMARY.md  Qwen_Attention_Visualizer.ipynb  README.md  analyze_attention_llava_rad.py  attention_comparison_visualizer.py  batch_analysis_100samples.py  check_answers.py  d  debug_accuracy.py  documentation_repository_structure.md  faithfulness_validation.py  fix_existing_results.py  generate_plots_from_saved.py  llavarad_visualizer.py  medgemma4b_config.json  medgemma4b_runner.py  medgemma_app.py  medgemma_attention_extraction.py  medgemma_dataset_evaluator.py  medgemma_launch.py  medgemma_launch_mimic_fixed.py  medgemma_mimic_analyzer.py  medgemma_relevancy_analyzer.py  medgemma_robustness_eval.py  medgemma_visualizer.py  medgemma_visualizer_technical_report.md  monitor_analysis.py  notebooks_medgemma_attention_demo.ipynb  notebooks_model_comparison.ipynb  process_completed_results.py  pyproject.toml  quick_test_single_sample.py  report_final_comparison.md  report_generator_comprehensive.py  results_summary_generator.py  run_medgemma_evaluation_main.py  test_attention_extraction.py  (+5 more)
analysis/: answer_change_analyzer.py  attention_change_analyzer.py  compare_llavarad_medgemma.py  llavarad_attention_analyzer.py
docs/: ADVISOR_FEEDBACK_PLAN.md  ANALYSIS_SUMMARY.md  APP_DOCUMENTATION.md  COMPLETE_ANALYSIS_COMPARISON.md  COMPREHENSIVE_ANALYSIS_UPDATE.md  FINAL_ANALYSIS_SUMMARY.md  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  MODEL_COMPARISON_REPORT.md  MedGemma_Attention_Visualization_demo.md  (+3 more)
(+261 files in other folders)
